made api for posting message instead of using redis
